Thu Apr 27 18:19:19 2000  James Hu  <jxh@entera.com>

        * ace/Dirent.i: Added checks to see if dirp_ is initialized
          before calling into ACE_OS.

Thu Apr 27 16:53:49 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/Hash_Map_Manager_T.cpp (unbind_all_i): Added new method
	  unbind_all() for removing all the entries in one shot.  Thanks
	  to Boris Sukholitko <boris@WebGlide.com> for providing this
	  enhancement.

	* tests/Hash_Map_Manager_Test.cpp: Added test for unbind_all().

Thu Apr 27 14:17:52 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.i:

          isatty (): Messed up on my CE change, so the version that
          takes an int was hidden by a ACE_WIN32 block.  This has been
          moved outside again.

        * ace/OS.cpp:

          Weird, somehow part of a section that should have been removed
          with the CE changes was still present.  Removed again.

Thu Apr 27 13:08:00 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/msvc_auto_compile.pl:

          Changed the code style and made it consistent.

          Also changed the core build to build all of the orbsvcs and
          do the static builds in the right order.

        * ace/OS.cpp:
        * ace/OS.i:

          For some reason, I had trouble with the libraries when the
          ACE_Cleanup destructor was in the .i file.  So I moved it to
          the .cpp file instead.

        * ace/ace_dll.dsp:

          Was defining ACE_ACE_HAS_DLL=1, which is #1, not needed and,
          #2, the wrong macro name.

        * ace/ace_lib.dsp:

          Changed the static configs to be of type Win32 Static Release/
          Debug instead of Win32 Release/Debug.

        * apps/gperf/src/gperf.dsp:
        * apps/gperf/src/gperf_lib.dsp:

          Added Win32 Static Release/Debug configs.

Thu Apr 27 14:32:45 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ACE-INSTALL (make): Updated the documentation.  Thanks to