@@ -963,6 +963,7 @@ Wai Keung Fung <wkfung@maews69.mae.cuhk.edu.hk>
 Michael Laing <mpl@flni.com>
 Benoit Viaud <benoit.viaud@artal.fr>
 Ken Weinert <kenw@ihs.com> 
+Ferran Boladeres Salvad <salvadof@iis.fhg.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
